@@ -1,3 +1,9 @@
+2001-11-17  Christopher Faylor  <cgf@redhat.com>
+	    Corinna Vinschen  <vinschen@redhat.com>
+
+	* config/i386/cygwin.h: Search target specific include directory for
+	w32api stuff, if appropriate.
+
 2001-11-15  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.md: Fix insn length of bit insns.
